[gd_scene load_steps=16 format=2]

[ext_resource path="res://NavButton.gd" type="Script" id=2]

[sub_resource type="Animation" id=6]
resource_name = "hover"
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_styles/hover:border_width_bottom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 32 ]
}

[sub_resource type="Animation" id=7]
resource_name = "hover -> normal"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_styles/normal:border_width_bottom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.535887, 1 ),
"update": 0,
"values": [ 32, 2 ]
}

[sub_resource type="Animation" id=8]
resource_name = "normal"
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_styles/normal:border_width_bottom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=2]
resource_name = "normal -> hover"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_styles/hover:border_width_bottom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 3.03143, 1 ),
"update": 0,
"values": [ 2, 32 ]
}

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "hover -> normal"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "normal -> hover"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "hover"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "normal"

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=3]
states/<<</node = SubResource( 9 )
states/<<</position = Vector2( 332, 259.5 )
states/>>>/node = SubResource( 11 )
states/>>>/position = Vector2( 331.5, 128.5 )
states/hover/node = SubResource( 10 )
states/hover/position = Vector2( 556, 186.625 )
states/normal/node = SubResource( 12 )
states/normal/position = Vector2( 166.5, 186.75 )
transitions = [ "hover", "<<<", SubResource( 14 ), "<<<", "normal", SubResource( 15 ), "normal", ">>>", SubResource( 16 ), ">>>", "hover", SubResource( 17 ) ]
start_node = "normal"

[sub_resource type="AnimationNodeStateMachinePlayback" id=4]

[node name="Button" type="Button"]
margin_right = 41.0
margin_bottom = 24.0
focus_mode = 0
text = "Text "
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animation" type="AnimationPlayer" parent="."]
anims/hover = SubResource( 6 )
"anims/hover -> normal" = SubResource( 7 )
anims/normal = SubResource( 8 )
"anims/normal -> hover" = SubResource( 2 )

[node name="StateMachine" type="AnimationTree" parent="."]
tree_root = SubResource( 3 )
anim_player = NodePath("../Animation")
parameters/playback = SubResource( 4 )

[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
